@@ -1,4 +1,14 @@
 2004-08-26 nalin
+	* src/minikafs.c(minikafs_ioctlcall): add, from Alexander Bostrom
+	(#127529).
+	* src/minikafs.c(minikafs_call): add, calling afs_ioctlcall or
+	afs_syscall as appropriate, from Alexander Bostrom (#127529).  The
+	setpag and pioctl functions now call this function instead of our
+	afs_syscall.
+	* src/minikafs.c(minikafs_has_afs): check for ioctl-based interface to
+	Arla or OpenAFS for Linux 2.6, from Alexander Bostrom (#127529).
+
+2004-08-26 nalin
 	* src/password.c(pam_sm_chauthtok): prompt for the user's current
 	password when use_first_pass isn't flagged, ignoring use_authtok
 	during the initial-authentication pass (#130950).
